gts-macros/tests/compile_fail/base_struct_missing_id.stderr
error: struct_to_gts_schema: Base structs must have either an ID field (one of: $id, id, gts_id, gtsId) OR a GTS Type field (one of: type, r#type, gts_type, gtsType, schema), but not both.
  --> tests/compile_fail/base_struct_missing_id.rs:15:12
   |
15 | pub struct TopicV1<P> {
   |            ^^^^^^^
